--- a/.github/workflows/synopsys-io.yml
+++ b/.github/workflows/synopsys-io.yml
@@ -28,7 +28,7 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Setup JDK 1.8
-      uses: actions/setup-java@1
+      uses: actions/setup-java@v1
       with:
         java-version: 1.8
       
